--- a/OEBPS/Text/c138.xhtml
+++ b/OEBPS/Text/c138.xhtml
@@ -11,170 +11,171 @@
 </head>
 
 <body>
-    <h1>138　総力戦</h1>
-    <p>昨日“欠けた月のメルセデス”第三巻が発売されました。</p>
-    <p>もし本屋で見かけたら是非！</p>
-    <p>　メルセデスの出した守護者三体が、ベルンハルトの守護者二体に襲い掛かった。</p>
-    <p>　ウーア・ゲヴァルトと呼ばれていた龍の能力は未知数だが、それを言えば向こうもシュヴァルツ・ヒストリエの能力を知らない。</p>
-    <p>　何より三対二で単純にこちらが有利だ。</p>
-    <p>　パラディースは破壊された頭部を復元して引き続き煙の巨人を相手し、フェーニクスが大空へ羽ばたいて龍の相手をする。</p>
-    <p>　シュヴァルツ・ヒストリエは後方で腕組みをしつつ、二体の援護射撃だ。</p>
+    <h1>138. 总决战</h1>
+    <p>昨天《残月的梅赛德斯》第三卷发售了。</p>
+    <p>如果在书店里看见了请一定<span class="comment translator">（你懂得）</span>！</p>
+    <p class="divline"></p>
+    <p>梅赛德斯派出的三个守护者攻向伯恩哈特的两个守护者。</p>
+    <p>被称为乌格瓦特的龙的能力是未知数，但说起来对方也不知道舒瓦尔茨·历史的能力。</p>
+    <p>最重要的是三比二，简单来说我方有利。</p>
+    <p>帕拉迪斯复原了被破坏的头部，继续与烟的巨人做对手，菲尼克斯向天空振翅飞翔，与龙做对手。</p>
+    <p>舒瓦尔茨·历史在后方抱着胳膊，对另外两个做掩护射击。</p>
     <p></p>
-    <p>“<span class="character">ほう。ダンジョンを三つ入手していたか……！</span>”</p>
-    <p>“<span class="character">そういう事だ。さて、どうする？　まさか終わりじゃないだろ？</span>”</p>
-    <p>“<span class="character">くくくっ……言いよるわ、小娘が</span>”</p>
+    <p>“<span class="character">哦。你拿到了三个地下城吗……！</span>”</p>
+    <p>“<span class="character">就是这么回事。那怎么办？难道不是结束了吗？</span>”</p>
+    <p>“<span class="character">哼……我告诉你，小女儿。</span>”</p>
     <p></p>
-    <p>　メルセデスとベルンハルトが笑みを張り付けたまま武器を衝突させ、楽しそうに語らう。</p>
-    <p>　分かっている。これで終わりではない事くらい。</p>
-    <p>　何故ならまだ、魔物を吐き出していない。</p>
-    <p>　守護者は確かにダンジョンマスターの切り札だが、逆に言えばまだ切り札しか・・切っていない。</p>
-    <p>　ゲームにおいて切り札は形成を逆転させてしまうほど強力なものだが、だからといって切り札だけでゲームに勝てるわけではないのだ。</p>
+    <p>梅赛德斯和伯恩哈特带着笑容将武器冲突，愉快地交谈着。</p>
+    <p>我知道。这不是结束的事情。</p>
+    <p>因为还没有放出魔物。</p>
+    <p>守护者确实是地下城主人的王牌，反过来说还只是王牌。</p>
+    <p>在游戏中，王牌是可以逆转其形成的强大的东西，但也不是说只有王牌就能赢游戏。</p>
     <p></p>
-    <p>“<span class="character">出番だ、暴れてこい！</span>”</p>
-    <p>“<span class="character">ゆけ、我が駒よ</span>”</p>
+    <p>“<span class="character">轮到你出场了，来捣乱！</span>”</p>
+    <p>“<span class="character">去吧，我的棋子。</span>”</p>
     <p></p>
-    <p>　メルセデスとベルンハルトが同時に魔物を大量解放した。</p>
-    <p>　メルセデスの側にはベンケイ、クロ、ピーコ、シュフのいつもの四体に加え、更にシュタルクダンジョン、帝国ダンジョン、グレンツェダンジョンの魔物が並ぶ。</p>
-    <p>　ベルンハルトの背後にも多様な魔物が列を為し、激突の時を今か今かと待ち望んでいた。</p>
-    <p>　そしてその総数は、三つのダンジョンを持っているメルセデスに決して劣っていない。</p>
-    <p>　いや、それどころか数は若干向こうが上かもしれない。</p>
-    <p>　余程、ダンジョンポイントを稼いで魔物を増産していたのだろう。</p>
+    <p>梅赛德斯和伯恩哈特同时释放了大量魔物。</p>
+    <p>梅赛德斯一侧除了有本凯、小黑、皮可、舒夫四只妖怪外，还有施塔克地下城、帝国地下城、格伦茨杰地下城等的魔物。</p>
+    <p>伯恩哈特的背后也排着各种各样的魔物，一直在期待着激战的时刻。</p>
+    <p>而且，其总数并不亚于拥有三个地下城的梅赛德斯。</p>
+    <p>不，不仅如此，数量可能会稍高一些。</p>
+    <p>大概是赚了地下城积分增加了魔物吧。</p>
     <p></p>
-    <p>“<span class="character">よし、数は揃えているようだな。だが指揮官は用意しているか？　娘よ</span>”</p>
-    <p>“<span class="character">指揮官……？</span>”</p>
-    <p>“魔物は数だけ揃えて戦わせればよいというものではない。自在に操る優秀な指揮官が必要だ。普段ならばそれはダンジョンマスター自身が担うべきだが……そのマスターが満足に指揮出来ぬ時もあるだろう。少なくとも私は、お前と戦っている最中に余計な事に意識を割いて隙を見せるほど愚かではないぞ”
-    </p>
+    <p>“<span class="character">好的，好像数量都准备好了。但是指挥官准备好了吗？我的女儿啊。</span>”</p>
+    <p>“<span class="character">指挥官……？</span>”</p>
+    <p>“<span class="character">魔物并不是只需要凑齐数量进行战斗就可以了，需要能自由操控的优秀指挥官。平时的话应该由迷宫主人自己来承担……但也有那个主人不能满意地指挥的时候吧。至少我在和你战斗的时候是多余的。不至于愚蠢到把意识分散在事情上让人看到破绽的程度</span>”</p>
     <p></p>
-    <p>　なるほど、と思った。</p>
-    <p>　確かにベルンハルトがいかに優秀でも、メルセデスと戦っている最中に魔物の指揮まで出来ない。</p>
-    <p>　むしろそんな真似をすれば、その隙を間違いなくメルセデスに突かれるだろう。</p>
-    <p>　だからこそ、有事の際の代わりの指揮官が必要なのだとベルンハルトは語る。</p>
+    <p>原来如此地想着。</p>
+    <p>确实，无论伯恩哈特多么优秀，在和梅赛德斯战斗的时候连魔物的指挥都做不到。</p>
+    <p>不如说，如果做出这种模仿的话，毫无疑问会被梅赛德斯击中。</p>
+    <p>正因为如此，伯恩哈特说有必要代替有事时的指挥官。</p>
     <p></p>
-    <p>“<span class="character">用意していないのか？　仕方のない奴だ……だが不出来な娘の面倒を見るのも父の役目よ。家庭教師を用意してやろう</span>”</p>
+    <p>“<span class="character">没准备吗？没办法的家伙……但是照顾不好的女儿也是父亲的职责。我给你当家庭教师吧。</span>”</p>
     <p></p>
-    <p>　ベルンハルトはそう言い、新たに魔物を召喚した。</p>
-    <p>　いや、魔物ではない。</p>
-    <p>　呼び出されたそれは獅子の頭部を持ち、逞しい人の身体を備えている。</p>
-    <p>　全身は黄金の鎧で包み、紅のマントをなびかせるその堂々たる姿は只者ではないと一目で理解させられた。</p>
+    <p>伯恩哈特这样说，新召唤了魔物。</p>
+    <p>不，不是魔物。</p>
+    <p>被叫出来的那个有狮子的头，有健壮的人的身体。</p>
+    <p>一眼就让我明白了，全身包裹着黄金铠甲，随风飘荡着红色斗篷的那个堂堂正正的身姿不是普通人。</p>
     <p></p>
-    <p>“<span class="character">それは？</span>”</p>
-    <p>“<span class="character">紹介しよう。こいつは先代獣王オライオン。先の戦争で獣人シメーレを率い、我らと争った男よ。無論、本人ではなく複製だがな。そこそこ有能な男だったので、オリジナルを始末する前に増やしておいたのだ</span>”</p>
-    <p>“<span class="character">先の戦争……ああ、グスタフ先生が活躍したという八十年前の</span>”</p>
+    <p>“<span class="character">那是？</span>”</p>
+    <p>“<span class="character">我来介绍一下。这家伙是上一代兽王伊拉里昂。在之前的战争中率领兽人的形象，和我们争斗的男人。当然，他不是本人，而是复制品。他是个相当能干的男人，所以在处理原创作品之前就增加了。</span>”</p>
+    <p>“<span class="character">之前的那场战争……啊，是古斯塔夫老师八十年前活跃的。</span>”</p>
     <p></p>
-    <p>　メルセデスが生まれる前の話なので詳しくは知らないが、八十年前に吸血鬼は獣人と戦争になり、そして勝利している。</p>
-    <p>　その際に活躍したのがメルセデスの担任教師でもあるグスタフであり、叔母であるハンナであり、そして父のベルンハルトだ。</p>
-    <p>　ならばこのライオン男は前の戦争の敵の総大将というわけか、とメルセデスは納得した。</p>
+    <p>因为是梅赛德斯出生前的故事，所以不知道详情，但八十年前吸血鬼和兽人发生了战争，并取得了胜利。</p>
+    <p>在那个时候活跃的是梅赛德斯的班主任古斯塔夫，姑母汉娜，还有父亲伯恩哈特。</p>
+    <p>那么，这个狮子男应该是之前战争的敌人的总大将吧，梅赛德斯理解了。</p>
     <p></p>
-    <p>“<span class="character">私の持つダンジョンのうちの片方は元々はこの男の所有物でな。それだけに魔物の指揮もお手の物よ</span>”</p>
-    <p>“<span class="character">ん？　だとすると……獣人の国は今、ダンジョンが一つしかない……？</span>”</p>
-    <p>“<span class="character">気付いたか。そうだ。新たに入手していなければ、という前提の話になるが……奴等も既に詰みかけている</span>”</p>
+    <p>“<span class="character">我所拥有的地下城中的一个原本是这个男人的所有物。正因为如此，魔物的指挥也是我的手笔。</span>”</p>
+    <p>“<span class="character">嗯？这样的话……兽人的国家现在只有一个地下城……？</span>”</p>
+    <p>“<span class="character">你注意到了吗？对了。这是以没有新入手为前提的话……他们也已经将死了。</span>”</p>
     <p></p>
-    <p>　これは大きな情報だ。そしてここまでの前提が覆ってしまった。</p>
-    <p>　メルセデスは今まで、獣人の国、エルフェの国がダンジョン二つ、鳥人がダンジョン一つと思っていた。</p>
-    <p>　しかし実際はもう、獣人の国もダンジョンを一つ失った状態であった。</p>
-    <p>　思っていた以上に、世界のバランスは崩壊している。</p>
+    <p>这是很大的信息。并且到这里为止的前提覆盖了。</p>
+    <p>梅赛德斯认为到现在为止，兽人的国家，精灵的国家有两个地下城，鸟人有一个地下城。</p>
+    <p>但是实际上，兽人的国家也已经失去了一个。</p>
+    <p>超出想象，世界的平衡正在崩溃。</p>
     <p></p>
-    <p>“<span class="character">魔物を指揮する事に長けた前の持ち主か……なるほど</span>”</p>
+    <p>“<span class="character">是擅长指挥魔物的之前的持有者吗……原来如此。</span>”</p>
     <p></p>
-    <p>　メルセデスは腕輪を突き出すようにし、獅子男を見る。</p>
-    <p>　腕輪の中では、早く出せと喚いている声が聞こえた。</p>
-    <p>　分かっている、今出してやる。</p>
-    <p>　今までは裏切りの可能性を考慮して一度も使ってやらなかったが、いつまでも警戒して使わないのでは度量が知れるというもの。</p>
-    <p>　これから世界を敵に回そうというのに、一国の女帝くらい使ってやれないのでは話にならないだろう。</p>
+    <p>梅赛德斯伸出手镯，看着狮子男。</p>
+    <p>在手镯里，听到了喊叫叫快点儿的声音。</p>
+    <p>我知道，现在就交给你。</p>
+    <p>到现在为止，考虑到背叛的可能性，一次也没有使用过，但是如果一直警戒着不使用的话，就会知道其度量。</p>
+    <p>虽然今后要与世界为敌，但如果连一个国家的女帝都不能使用的话，那就不像话了。</p>
     <p></p>
-    <p>“<span class="character">ならばこちらにも同じような奴がいる。もっともこっちはオリジナルだがな……出番だぞ、ベアトリクス！</span>”</p>
+    <p>“<span class="character">那么这边也有同样的家伙。不过这边是本尊的……轮到出场了，是贝尼亚克斯！</span>”</p>
     <p></p>
-    <p>　メルセデスの声と共に、花びらが舞い散った。</p>
-    <p>　その中から踊るようにして飛び出したのはベルンハルトのかつての政敵でもあった女帝ベアトリクスだ。</p>
-    <p>　これにはベルンハルトも驚いたように目を見開き、得心がいったかのように笑った。</p>
+    <p>随着梅赛德斯的声音，花瓣飞舞散落。</p>
+    <p>从中跳出来的是伯恩哈特曾经的政敌女帝贝尔特里克斯。</p>
+    <p>伯恩哈特对此也惊讶地睁大了眼睛，好像很得意似的笑了。</p>
     <p></p>
-    <p>“<span class="character">久しいな、ベルンハルト。何やら随分愉快な親子喧嘩をしているではないか</span>”</p>
-    <p>“<span class="character">ああ、全く愉快だ。そちらは随分情けない事になっているな？　女狐</span>”</p>
-    <p>“<span class="character">何、誰かに使われるというのも存外悪いものではない。それが世界の未来をも変え得る逸材ならば尚の事よ。それに貴様もすぐに同じ立場になる</span>”</p>
+    <p>“<span class="character">好久不见了，伯恩哈特。你们父子俩不是在吵架吗？</span>”</p>
+    <p>“<span class="character">啊，真是太开心了。那边的事情真是太无情了吧？女狐狸。</span>”</p>
+    <p>“<span class="character">什么，被谁使用也不是什么坏事。如果那是能改变世界未来的优秀人才那就更好了。而且你也会马上站在同样的立场上。</span>”</p>
     <p></p>
-    <p>　ベアトリクスは不敵に笑い、鉄扇を閉じた。</p>
-    <p>　この鉄扇は以前まで使っていたダンジョンキーではなく、よく似たデザインの別の鉄扇だ。</p>
-    <p>　ダンジョンをメルセデスに譲った今、ベアトリクスはダンジョンキーを使えない。</p>
-    <p>　その為、どうしても以前に比べてしまえば戦力ダウンは避けられないが、それでも指揮官としての能力は健在だ。</p>
+    <p>贝尔特里克斯目瞪口呆地笑着，关上了铁扇。</p>
+    <p>这把铁扇不是以前用过的地下城钥匙，而是设计相似的另一把铁扇。</p>
+    <p>现在把地下城让给了梅赛德斯，承载者不能使用地下城钥匙。</p>
+    <p>因此，无论如何与以前相比，战力下降是不可避免的，但是作为指挥官的能力依然健在。</p>
     <p></p>
-    <p>“<span class="character">ベアトリクス、魔物の指揮を任せる。父の軍勢を何とか抑え込んでくれ</span>”</p>
-    <p>“<span class="character">何だ？　抑え込むだけでよいのか？</span>”</p>
+    <p>“<span class="character">贝尔特里克斯，魔物的指挥交给你了。你要想办法压制住父亲的军队。</span>”</p>
+    <p>“<span class="character">什么？只要压制就可以了吗？</span>”</p>
     <p></p>
-    <p>　両者の率いる魔物の数は見た所、そこまで差はないが若干こちらが負けている。</p>
-    <p>　ならば抑え込んでくれれば上出来と思ったのだが、どうやらベアトリクスは勝てる自信があるらしい。</p>
+    <p>两者所率领的魔物数量看起来并没有太大的差别，但还是有点输了。</p>
+    <p>如果能压制住的话，那就更好了，不过，不管怎么说贝尔特里克斯似乎有自信能取胜。</p>
     <p></p>
-    <p>“<span class="character">……やれるのか？</span>”</p>
-    <p>“<span class="character">ベルンハルト自身が指揮するならばいざ知らず、知略を知らぬ獣が率いる軍など恐れるに値せん</span>”</p>
-    <p>“<span class="character">大口に見合うだけの戦果を期待していいんだな？</span>”</p>
-    <p>“<span class="character">折角の初舞台だ。完全な勝利をお前に捧げてやろうではないか</span>”</p>
+    <p>“<span class="character">……能做吗？</span>”</p>
+    <p>“<span class="character">如果伯恩哈特自己指挥的话还可以，不知道智谋的野兽所率领的军队也不值得害怕。</span>”</p>
+    <p>“<span class="character">我们可以期待一场可以大张旗鼓的战果吗？</span>”</p>
+    <p>“<span class="character">这是难得的初登舞台。我们不是要把完全的胜利献给你吗？</span>”</p>
     <p></p>
-    <p>　ベアトリクスは自信を漲らせ、敵の軍勢を前に堂々と勝利を宣言した。</p>
-    <p>　メルセデスに敗れ、配下になり……それでも尚、女帝の威容には聊かの衰えもない。</p>
-    <p>　自分は必ず勝つという自負だけがあった。</p>
+    <p>贝尔特里克斯充满信心，在敌人的军队面前堂堂正正地宣布胜利。</p>
+    <p>败给了梅赛德斯，成为了部下……尽管如此，女帝的威容却丝毫不减。</p>
+    <p>只有自己一定会赢的自负。</p>
     <p></p>
-    <p>“<span class="character">さあ行くぞ、者共！　我らが主を勝たせる為に！</span>”</p>
-    <p>“<span class="character">ぐっ……と、とうとう……主の配下の中でのリーダーという座まで取られた……！</span>”</p>
-    <p>“<span class="character">そんな事を気にしている場合ではないだろう……</span>”</p>
+    <p>“<span class="character">来吧，我们走吧，人们！为了让我们的主获胜！</span>”</p>
+    <p>“<span class="character">咕……终于……被拿到了主人手下的领导位置……！</span>”</p>
+    <p>“<span class="character">不是在意那种事的时候吧……</span>”</p>
     <p></p>
-    <p>　魔物達へ号令を出すベアトリクスに、最古参であるベンケイが悔しそうに拳を震わせ、シュフに呆れられていた。</p>
-    <p>　ベンケイは今までずっと、メルセデス配下の中でリーダーのような立場にいたが、残念ながら指揮能力を備えていない。</p>
-    <p>　なのでこういう集団戦では指揮能力に長けるベアトリクスに将の座を取られてしまうのは仕方のない事であった。</p>
-    <p>　両軍が衝突し、周囲の雑魚を全て無視してメルセデスとベルンハルトが激突する。</p>
-    <p>　槍とハルバードが死の間合いで縦横無尽に暴れ、二人の周囲に誰も近付けない刃の結界となって近付いただけの魔物を敵味方関係なく細切れにする。</p>
-    <p>　守護者同士の戦いも苛烈を極めていた。</p>
-    <p>　フェーニクスとシュヴァルツ・ヒストリエの火炎が周囲を焼き払い、龍の竜巻が森林を根元から引き千切って何もかもを蹂躙する。</p>
-    <p>　だがパラディースが植物を支配し、新たに木々が生えて敵に襲い掛かる。</p>
-    <p>　煙の巨人が生み出した黒い煙が空に上がって雷雲と化し、龍が雷を降らせた。</p>
+    <p>对向魔物们发出号令的贝尔特里克斯，资格最老的本凯懊悔地颤抖着拳头，被吓了一跳。</p>
+    <p>到现在为止，本凯一直在梅赛德斯的手下担任领导，但是遗憾的是他没有指挥能力。</p>
+    <p>因此，在这样的集体战中，被擅长指挥能力的贝尔特里克斯占据了将的位置也是没有办法的事。</p>
+    <p>两军发生冲突，梅赛德斯和伯恩哈特无视周围所有的杂鱼展开激战。</p>
+    <p>枪与斧枪在死亡之际纵横驰骋，成为两人周围谁都无法接近的刃之结界，将只不过是接近的魔物与敌我无关地切碎。</p>
+    <p>守护者之间的战斗也极其激烈。</p>
+    <p>菲尼克斯和修瓦尔茨·历史的火焰烧光了周围，龙之龙卷风从森林的根部撕开，蹂躏一切。</p>
+    <p>但是帕拉蒂斯支配着植物，新长出树木向敌人袭击。</p>
+    <p>烟雾巨人产生的黑烟升上天空变成了雷云，龙降下了雷。</p>
     <p></p>
-    <p>“<span class="character">うおおおおおお！！</span>”</p>
+    <p>“<span class="character">哦哦哦哦哦哦哦哦！</span>”</p>
     <p></p>
-    <p>　リーダーの座を取られてしまったベンケイが一騎当千の鬼と化して次々と魔物を屠り、クロが素早く戦場を駆けて敵の喉を噛み千切る。</p>
-    <p>　シュフは敵の中でも一際強力な魔物……恐らくはベンケイやドミニオンといった扉の前を守る番人級と思われる敵と交戦し、ピーコはグレンツェダンジョンの飛行タイプの魔物を率いて大空を舞い、敵軍へ奇襲をかける。</p>
-    <p>　二つの軍の激突の最中、ベアトリクスと先代獣王の視線が交差し、ベアトリクスは余裕の笑みを……先代獣王は憎悪の形相を浮かべた。</p>
+    <p>被夺走了队长宝座的本凯化身为一对当千的鬼，一个接一个地杀死了魔物，小黑迅速地在战场上奔跑，咬断了敌人的喉咙。</p>
+    <p>舒夫在敌人中也是格外强大的魔物……恐怕他会和门卫门前的番人级敌人交战，皮科率领着格伦茨杰地下城的飞行型魔物在天空中飞舞，向敌军发动奇袭。</p>
+    <p>在两军的激战中，贝尔尼托克斯和前代兽王的视线交叉，贝尔尼托克斯露出了从容的笑容……上一代兽王浮现出憎恨的样子。</p>
     <p></p>
-    <p>“<span class="character">出し惜しみは無しだ。お前達も行け！</span>”</p>
+    <p>“<span class="character">没有什么舍不得拿出的。你们也去！</span>”</p>
     <p></p>
-    <p>　メルセデスはハルバードから更に魔物を召喚し、フレデリックから奪ったデーモンフォルストを解き放った。</p>
-    <p>　デーモンフォルストは守護者には及ばないが、番人級よりは強いというかなり便利な魔物だ。</p>
-    <p>　フレデリックも全く、いい魔物をプレゼントしてくれたものだ。</p>
-    <p>　デーモンフォルストが緑の巨人と化し、守護者達の戦いをサポートするべく前進する。</p>
-    <p>　その影からユリアが飛び出して先代獣王を暗殺するべく奇襲をかける……が、その刃はベルンハルト配下のフォーゲラ、隠密部隊長のハンゾウに阻まれていた。</p>
-    <p>　以前片足を失ったはずだが、今はしっかり両足が揃っている。</p>
-    <p>　治療したか、それとも前とは別個体か……どちらにせよ、強力な敵だ。</p>
-    <p>　ユリアとハンゾウは高速で駆け、戦場を走る二つの黒い影となって何度も刃を交わした。</p>
-    <p>　まるで雷鳴のような地響きを立てて数多の魔物同士が衝突し、守護者は自然現象すら操り、メルセデスとベルンハルトが互角の戦いを演じる。</p>
-    <p>　それはもう、個人同士の戦いではなかった。</p>
-    <p>　それはもう、戦争であった。</p>
+    <p>梅赛德斯从斧枪召唤了魔物，解放了从弗雷德里克那里夺取的恶魔福斯特。</p>
+    <p>虽然比不上守护者，但却是比番人级更强的相当方便的魔物。</p>
+    <p>弗雷德里克也完全是送我好魔物的礼物。</p>
+    <p>守护者化为绿色巨人，为了支持守护者们的战斗而前进。</p>
+    <p>尤里亚从那个影子中飞出来，为了暗杀前代兽王而进行奇袭……但是，那把刀刃被伯恩哈特手下的鸟人、隐密部队长的汉藏阻止了。</p>
+    <p>以前应该丢了一只脚，现在两脚确实齐备了。</p>
+    <p>是治疗了，还是和以前不同的个体呢……不管怎样，都是强大的敌人。</p>
+    <p>尤里亚和汉藏高速奔跑，成为在战场上奔跑的两个黑影，多次交锋。</p>
+    <p>简直就像雷鸣般震耳欲聋，数个魔物之间发生冲突，守护者甚至可以操纵自然现象，梅赛德斯和伯恩哈特将在本片中饰演势均力敌的战斗。</p>
+    <p>那已经不是个人之间的战斗了。</p>
+    <p>那已经是战争了。</p>
     <p></p>
-    <p>“<span class="character">もう手駒は出し切ったか！？　それともまだ伏せているか！？　どちらにせよ、このままでは消耗戦だ。なあ、娘よ！</span>”</p>
-    <p>“<span class="character">ああ、そうだな！　どれだけ札を切ろうと、最後に勝敗を分けるのは結局、ダンジョンマスター自身の実力だ！</span>”</p>
+    <p>“<span class="character">手驹已经出尽了吗！？还是还在趴着呢？不管怎么说，这样下去就是消耗战了。对吧，女儿啊！</span>”</p>
+    <p>“<span class="character">啊，是啊！不管切多少牌，最后分出胜负的结果是迷宫主人自身的实力！</span>”</p>
     <p></p>
-    <p>　普通の軍なら、総大将が最強である必要はない。むしろ総大将自ら戦うのは悪手である。</p>
-    <p>　だが全てのダンジョンを手に入れるならば話は別。</p>
-    <p>　ダンジョンを手に入れる際の守護者との戦いは、マスター自らが行わなければならない。</p>
-    <p>　マスター自身が強くなければいけない。</p>
-    <p>　たとえ結果的に勝利しようと、ここで父に、娘に負けるようではとてもこの先の勝者になどなれやしない。</p>
-    <p>　だからこその、正面対決！</p>
-    <p>　総力を吐き出した末に最後に残ったのは、最初と変わらない父と娘の戦いだ。</p>
-    <p>　互いの札は見せた。切り札も見せた。共に相手の実力をしっかりと確認した。　</p>
-    <p>　ならば後は……どちらが強いか、だ。</p>
+    <p>如果是普通的军队，不需要总大将最强。倒不如说总大将自己战斗是个坏蛋。</p>
+    <p>但是如果能得到全部的地下城的话就另当别论了。</p>
+    <p>获得地下城时必须由主人亲自与守护者战斗。</p>
+    <p>主人必须要自己强大。</p>
+    <p>即使最终取得胜利，在这里输给父亲和女儿的话，也很难成为今后的胜利者。</p>
+    <p>正因为如此，正面对决！</p>
+    <p>倾吐全力后最后留下的，是和最初一样没有变化的父女之间的战斗。</p>
+    <p>展示了彼此的牌。王牌也给人看了。共同确认了对方的实力。　</p>
+    <p>那么接下来呢……哪个更厉害呢。</p>
     <p></p>
-    <p>　メルセデスが両手に魔力を集約させ、ベルンハルトもありったけの力を解放する。</p>
-    <p>　ベルンハルトの槍に雷が降り注ぎ、風に乗って加速――一気に槍を振り上げた。</p>
-    <p>　メルセデスも同時に風に乗って駆け出して跳躍――重力を乗せたハルバードを振り下ろす。</p>
+    <p>梅赛德斯将魔力集中在双手上，贝尔恩哈特也释放了所有力量。</p>
+    <p>伯恩哈特的枪上缠绕雷光，乘风加速——一口气举起了枪。</p>
+    <p>梅赛德斯也同时乘着风跑出来跳跃——斧枪甩下承载着重力的。</p>
     <p></p>
     <p>“<span class="character">重力百倍！</span>”</p>
     <p></p>
-    <p>　――天を裂くような轟音が響き渡った。</p>
-    <p>近くの町の人々“”</p>
-    <p>ジークリンデ“”</p>
-    <p>ハンナ“”</p>
-    <p>フェリックス“”</p>
+    <p>——犹如撕裂天空般的轰鸣声响彻了整个天空。</p>
+    <p class="divline"></p>
+    <p>附近的城镇的人：“”</p>
+    <p>吉克林德：“”</p>
+    <p>汉娜：“”</p>
+    <p>菲利克斯：“”</p>
     <p></p>
-    <p>同格の相手との本気の戦いはとても楽しい。</p>
-    <p>でも、周囲の迷惑も考えるべきだと思うんだ……。</p>
+    <p>与同级别的对手进行认真的战斗是很有趣的。</p>
+    <p>但我认为我们应该考虑我们周围的不便......</p>
     <p></p>
-    <p>【一部キャラの名前変更】</p>
+    <p>【重命名了一些角色】</p>
     <p>イラリオン→オライオン</p>
 </body>
 
