--- a/OEBPS/Text/c139.xhtml
+++ b/OEBPS/Text/c139.xhtml
@@ -11,200 +11,202 @@
 </head>
 
 <body>
-    <h1>139　決着</h1>
-    <p>　長引かせようと思えば、いくらでも長引かせる事は出来ただろう。</p>
-    <p>　それだけの体力がある。</p>
-    <p>　長期戦をしようと思えば何日でも何月でも戦えただろう。</p>
-    <p>　それだけの兵力がある。</p>
-    <p>　しかしメルセデスもベルンハルトも、長期戦を選択しなかった。</p>
-    <p>　何故ならこれは、この先の戦いにどちらが挑むかを決める為の、格付けの一戦だ。</p>
-    <p>　父が娘を従えて世界に挑むか。それとも娘が父を従えて世界に挑むか。それを決める為に今回の戦いがある。</p>
-    <p>　だからこそ、戦力の無駄な消費はどちらも望まない。</p>
-    <p>　互いの手札はよく分かった。それを従えるだけの器量と才覚を持つ事も確認し合った。</p>
-    <p>　そして、兵をぶつけるだけでは互いに損しかしない事も、十分に見て分かった。ならば。</p>
+    <h1>139. 決着</h1>
+    <p>如果想持久战的话，无论多长都可以继续吧。</p>
+    <p>有那么多体力。</p>
+    <p>如果想长期作战的话，无论几天几月都能战斗吧。</p>
+    <p>有那么些兵力。</p>
+    <p>但是梅赛德斯和伯恩哈特都没有选择长期战。</p>
+    <p>要说为什么，这是为了决定今后哪一方会挑战而进行的等级战。</p>
+    <p>父亲会带着女儿向世界挑战吗。还是女儿带着父亲向世界挑战呢。为了决定那个有这次的战斗。</p>
+    <p>正因为如此，双方都不希望浪费战斗力。</p>
+    <p>我很清楚对方的手牌。我们也确认了拥有能够随波逐流的才能和才能。</p>
+    <p>而且，光是碰上士兵互相都会吃亏，这一点我看得十分清楚。那么。</p>
     <p></p>
-    <p>　――ならば十分だ。そうだろう？　父よ。</p>
+    <p>——那就足够了。是吗？父亲啊。</p>
     <p></p>
-    <p>　メルセデスが言葉を発する事なく、視線で父に問う。</p>
-    <p>　言葉は要らない。返事を聞く必要もない。</p>
-    <p>　問わずとも、聞かずとも分かる。数分数時間の会話などなくとも、たった一秒の視線の交差があればそれだけで相手の答えが分かる。</p>
+    <p>梅赛德斯没有说话，而是用视线问父亲。</p>
+    <p>不需要语言。没必要得到回应。</p>
+    <p>不问，不问也知道。即使没有几分钟几小时的对话，只要一秒的视线相交，就能知道对方的回答。</p>
     <p></p>
-    <p>　――ああ、十分だ。結果の見えた長期戦などやるだけ無駄だ。</p>
+    <p>——啊，足够了。只做能看到结果的长期战是徒劳的。</p>
     <p></p>
-    <p>　この先、兵力をぶつけた消耗戦をすればどうなるかなど、分かっている。</p>
-    <p>　互いの軍勢には優秀な指揮官がいる。有能な守護者がいる。そして死を恐れぬ無限の軍勢がいる。</p>
-    <p>　戦いはきっと数日……いや、数か月は続くだろう。魔物はどんどん死に、守護者も倒れ、指揮官も失うだろう。</p>
-    <p>　そして最後には結局、大将同士の正面衝突になるだろう。</p>
-    <p>　そこまで分かっている。そこまで見えている。ならば……そこに至るまでの過程など、飛ばしてしまえばいい。</p>
-    <p>　どうせ最後に待っている結果は同じなのだ。</p>
-    <p>　ならばそれが数カ月後か、今すぐかの違いでしかない。</p>
-    <p>　だから――。</p>
+    <p>在这之前，我知道如果打了兵力的消耗战会怎么样。</p>
+    <p>双方军队都有优秀的指挥官。有能干的守护者。而且还有不怕死的无限军队。</p>
+    <p>战斗一定会持续几天……不，会持续几个月吧。魔物会不断地死去，守护者也会倒下，指挥官也会失去吧。</p>
+    <p>最后，结局是大将之间的正面冲突吧。</p>
+    <p>我知道那么多。我看到了那里。那么……到那里为止的过程等，跳过就可以了。</p>
+    <p>反正最后等待的结果是一样的。</p>
+    <p>如果是这样的话，那只能是几个月后或者现在马上的区别了。</p>
+    <p>所以——。</p>
     <p></p>
-    <p>“<span class="character">今ここで決めようか！　ベルンハルト！</span>”</p>
-    <p>“<span class="character">ああ、ここで決めよう！　どちらが上かを！</span>”</p>
+    <p>“<span class="character">现在就在这里决定吧！伯恩哈特！</span>”</p>
+    <p>“<span class="character">啊，在这里决定吧！看谁更厉害！</span>”</p>
     <p></p>
-    <p>　メルセデスとベルンハルトの、渾身の一撃が衝突した。</p>
-    <p>　ぶつかると同時にメルセデスの全身を電撃が襲い、ベルンハルトに重圧がかかる。</p>
-    <p>　ダメージは軽くない。どちらも血を噴き出し、余波だけで全身が刻まれていく。</p>
-    <p>　二人を中心に地面が抉れ、普段は結んでいるメルセデスの後ろ髪が解けた。</p>
-    <p>　だがそれでも二匹の怪物は壮絶に、牙を剥いて笑う。</p>
+    <p>梅赛德斯和伯恩哈特的浑身一击发生了冲突。</p>
+    <p>在碰撞的同时，电击袭击了梅赛德斯全身，给伯恩哈特施加了重压。</p>
+    <p>伤害不轻。无论哪一方都会喷血，只剩下余波全身都会被镌刻。</p>
+    <p>以两人为中心挖出地面，解开了平时系着的梅赛德斯的后发。</p>
+    <p>但是即便如此，这两只怪物还是非常壮烈地露出獠牙笑着。</p>
     <p></p>
-    <p>“<span class="character">……っ！</span>”</p>
+    <p>“<span class="character">……啧！</span>”</p>
     <p></p>
-    <p>　メルセデスの額から滝のように汗が流れる。</p>
-    <p>　重力百倍はメルセデスにとって、最大の切り札だ。</p>
-    <p>　最初の頃からずっと、決め技としてここぞという時に用いてきた。</p>
-    <p>　守護者との戦いだって、この技で勝利を掴んできた。</p>
-    <p>　この技を出して終わらなかった事は過去に一度もない。</p>
-    <p>　それが今、止められている。</p>
-    <p>　そして、この技は本来、インパクトの瞬間だけ百倍の重力を放つというものだ。</p>
-    <p>　断じて、放ち続けるような技ではない。</p>
-    <p>　ハルバードの先に発生させているとはいえ、メルセデス自身の腕にも重力はかかっている。</p>
-    <p>　先程から腕の骨が軋み、罅割れているのが自分で分かる。</p>
-    <p>　しかし恐るべきはベルンハルトか。</p>
-    <p>　メルセデスのような重力トレーニングなどしていないだろうに、この百倍の重力を全身に浴びながら耐えている。</p>
-    <p>　無論無傷ではないだろう。全身の骨に罅が入り、間違いなく重傷を負っている。</p>
-    <p>　しかも重さが増すというのは単純に体重が増えるだけではない。</p>
-    <p>　内臓も、血の巡りも。その全てに影響する。吸血鬼にとって生命線である血液の循環すら満足に行えなくなる。</p>
-    <p>　間違いなく辛いはず……その証拠に元々青白い顔色は更に青く、耳や口、鼻から血が溢れている。</p>
+    <p>梅赛德斯的额头像瀑布一样流汗。</p>
+    <p>对于梅赛德斯来说，重力百倍是最大的王牌。</p>
+    <p>从最初的时候开始，一直作为决定性的招数在这里使用。</p>
+    <p>和守护者的战斗，用这个招数也抓住了胜利。</p>
+    <p>过去一次也没有用这个招数结束的事情。</p>
+    <p>那个现在被停止了。</p>
+    <p>而且，这个技能本来就是在冲击的瞬间释放一百倍的重力。</p>
+    <p>绝对不是持续放出的技能。</p>
+    <p>虽说判定是在斧枪的前方，但梅赛德斯自身的手臂也有重力。</p>
+    <p>从刚才开始胳膊上的骨头就有了裂痕，我自己也知道。</p>
+    <p>但是，可怕的是伯恩哈特吗。</p>
+    <p>虽然没有进行梅赛德斯那样的重力训练，但是全身承受着这百倍的重力。</p>
+    <p>当然不是无伤的吧。全身的骨头有裂痕，肯定是受了重伤。</p>
+    <p>而且重量增加不仅仅是单纯的体重增加。</p>
+    <p>内脏也好，血液循环也好。我会影响那个的全部。对吸血鬼来说甚至连作为生命线的血液循环也不能满足地进行。</p>
+    <p>毫无疑问应该很痛苦……证据就是，原本苍白的脸色更加苍白，耳朵、嘴巴、鼻子都充满了血。</p>
     <p></p>
-    <p>“<span class="character">く、くくく……っ</span>”</p>
+    <p>“<span class="character">库、库库库……っ</span>”</p>
     <p></p>
-    <p>　想像を絶する苦境の中、ベルンハルトは我慢出来ないというように笑った。</p>
-    <p>　最初に見た時から、いつかこの日が来るのは分かっていた。</p>
-    <p>　この娘は必ず己の最大の敵になると確信していた。</p>
-    <p>　しかし、しかしだ。まさかこれほどとは。</p>
-    <p>　ベルンハルトの必殺の一撃は、触れた相手に強力な電撃を浴びせて焼き尽くす。</p>
-    <p>　メルセデスにも勿論効いている。全身の肉が焦げ、あちこちが炭化している。</p>
-    <p>　肉だけではなく臓腑も骨も無事ではないだろう。</p>
-    <p>　だというのに――嗚呼、何と愉快な事か。それでも勝利をもぎ取ろうと攻撃を続けている。</p>
+    <p>在难以想象的困境中，伯恩哈特忍不住笑了。</p>
+    <p>从第一次看到的时候开始，就知道总有一天会到来。</p>
+    <p>确信着这个女儿一定会成为自己最大的敌人。</p>
+    <p>但是，但是。没想到会这样。</p>
+    <p>伯恩哈特的必杀一击，让接触的对手受到强力的电击而烧毁。</p>
+    <p>当然对梅赛德斯也有效。全身的肉都烧焦了，到处都在炭化。</p>
+    <p>不仅仅是肉，脏腑和骨头也不安全吧。</p>
+    <p>但是——啊，多么愉快的事啊。尽管如此，为了取得胜利而继续攻击。</p>
     <p></p>
-    <p>　ああ、そうだとも。そうだとも、父よ。娘よ。</p>
-    <p>　この程度で怯むような者が世界を相手に戦えるものか。</p>
-    <p>　この世界の時計の針を動かせるものか。</p>
-    <p>　己の血を流す事を怯える小物に何が変えられるというのか。</p>
-    <p>　いつだって道を切り拓くのは、茨の道を裸足で走破する者だ。</p>
-    <p>　ならば痛みを恐れるな。親しい隣人として抱きしめろ。</p>
-    <p>　返り血と己の血で赤く化粧を施し、一寸先も見えない暗闇へ突き進め。</p>
-    <p>　それが出来るのはきっと、私達だけだ。</p>
-    <p>　そう信じている。だから――メルセデスは更に、一歩前へと踏み出した。</p>
+    <p>啊，原来如此。是啊，爸爸。女儿啊。</p>
+    <p>这样胆怯的人怎么能与世界为敌。</p>
+    <p>这个世界的时钟怎么能转动呢。</p>
+    <p>害怕自己流血的小东西能改变什么呢。</p>
+    <p>无论何时开拓道路的都是赤脚在荆棘路上奔跑的人。</p>
+    <p>那么不要害怕疼痛。作为亲密的邻居拥抱吧。</p>
+    <p>用鲜血和自己的血涂上红色的妆，向着一寸也看不见的黑暗前进。</p>
+    <p>能做到那个的一定只有我们。</p>
+    <p>我相信。所以——梅赛德斯更加向前迈出了一步。</p>
     <p></p>
-    <p>“<span class="character">重力――千倍！！</span>”</p>
+    <p>“<span class="character">重力——千倍！！</span>”</p>
     <p></p>
-    <p>　メルセデスとベルンハルトを中心に、大地が円柱型に陥没した。</p>
-    <p>　まるで柔らかいケーキの生地を丸い型紙で貫いてその部分だけを取り除いたかのように、大地が消えた。</p>
-    <p>　強力な魔法を使うには己を構成しているナノマシンを多く消費してしまう。</p>
-    <p>　だから魔法を使う者というのは余分な部分……例えば脂肪などを蓄えている者の方が有利だ。</p>
-    <p>　だがメルセデスにそんな余分な部分などない。</p>
-    <p>　だが関係ない。やるだけだ。</p>
-    <p>　メルセデスの解けた髪が燃えるように先端から消えていき、短くなっていく。</p>
-    <p>　重力を千倍にしたのはほんの一瞬の事で、時間にして一秒もない。</p>
-    <p>　だがそれだけの時間でベルンハルトの全身の骨が砕け、術者であるメルセデスの腕も砕けた。</p>
-    <p>　髪は首元まで分解されてショートヘアになってしまい、反動で全身から血が溢れた。</p>
-    <p>　そして――二人同時に、奈落の底へと墜落していった。</p>
+    <p>以梅赛德斯和伯恩哈特为中心，大地陷落成圆柱形。</p>
+    <p>简直就像是用圆形的纸型把柔软的蛋糕质地穿过，只除去了那个部分一样，大地消失了。</p>
+    <p>使用强大的魔法会消耗很多构成自己的纳米机。</p>
+    <p>所以说使用魔法的人是多余的部分……例如储存脂肪的人比较有利。</p>
+    <p>但是，梅赛德斯并没有多余的部分。</p>
+    <p>但是没有关系。只是做。</p>
+    <p>梅赛德斯解开的头发像燃烧一样从尖端消失，变短。</p>
+    <p>把重力变成一千倍只是一瞬间的事情，时间上一秒也没有。</p>
+    <p>但是，仅此一段时间，伯恩哈特全身的骨头就碎了，作为术者的梅赛德斯的手臂也碎了。</p>
+    <p>头发被分解到颈部变成了短发，由于反动全身都充满了血。</p>
+    <p>然后——两人同时坠落到了地狱的底部。</p>
     <p></p>
+    <p class="divline"></p>
     <p>◆</p>
     <p></p>
-    <p>“<span class="character">……おい。生きているか、父よ</span>”</p>
-    <p>“<span class="character">…………かろうじてな</span>”</p>
+    <p>“<span class="character">……喂，还活着吗，爸爸。</span>”</p>
+    <p>“<span class="character">……好不容易啊。</span>”</p>
     <p></p>
-    <p>　穴の底で、メルセデスとベルンハルトは重なるようにして倒れていた。</p>
-    <p>　仰向けに倒れるベルンハルトを下敷きにメルセデスも倒れているが、どちらも起き上がろうにも起き上がれない。</p>
-    <p>　それはそうだ。片や全身の骨が粉々で、片や自分で放った魔法の反動と電撃で負った全身の火傷に加えて麻痺までしている。</p>
-    <p>　これは果たしてどちらの勝ちなのか……その答えは、二人の間では明確に出ていた。</p>
-    <p>　ベルンハルトは指一本も動かせないが、メルセデスは無理をすれば折れてない方の腕くらいはかろうじて動かせる。</p>
-    <p>　今のベルンハルトに止めを刺すなら、腕一本動けば十分だ。</p>
-    <p>　少し無理をしてベルンハルトの上から退いて、首でも切ってやればいい。</p>
-    <p>　つまり、ほぼ相打ちにしか見えないが現状はメルセデスがベルンハルトの生殺与奪を握っている状態であり……この戦いの勝者はメルセデスである。</p>
+    <p>在洞底，梅赛德斯和伯恩哈特重叠着倒下了。</p>
+    <p>梅赛德斯也倒在了仰面倒下的伯恩哈特的下面，但是无论哪一个都想爬起来，站不起来。</p>
+    <p>那是。另一方面，全身的骨头粉碎，一方面加上自己放出的魔法的反作用力和电击所负的全身烧伤，甚至麻痹了。</p>
+    <p>这到底是哪一方的胜利呢……这个答案在两人之间明确地出现了。</p>
+    <p>伯恩哈特一根手指都不能动，但梅赛德斯勉强的话，没有折断的那只手臂勉强能动。</p>
+    <p>如果要在现在的伯恩哈特扎上止痛药的话，只要动一只手臂就足够了。</p>
+    <p>稍微勉强一下从伯恩哈特上面退出来，剪个脖子就可以了。</p>
+    <p>也就是说，虽然看起来基本上是互打，但现状是梅赛德斯掌握着伯恩哈特的生杀予夺……这场战斗的胜利者是梅赛德斯。</p>
     <p></p>
-    <p>“<span class="character">メルセデス……何とか上に戻って戦闘の停止を呼びかけてこい。このままでは無駄に魔物が死ぬ</span>”</p>
-    <p>“<span class="character">そうしたいのは山々だが、私も再生が間に合ってない</span>”</p>
+    <p>“<span class="character">梅赛德斯……请无论如何回到上面呼吁停止战斗。这样下去魔物就会白白死去。</span>”</p>
+    <p>“<span class="character">虽然我很想这么做，但是我也赶不上再生。</span>”</p>
     <p></p>
-    <p>　メルセデスは腕を動かし、何とかハルバードから唯一中に残していた存在……マックス・ファイトを召喚した。</p>
-    <p>　全く戦力にならないという理由で彼だけ出していなかったのだが、今回は逆にそれがよかったようだ。</p>
-    <p>　おかげで、伝言役をここで出す事が出来た。</p>
+    <p>梅赛德斯移动手臂，总算将斧枪唯一留下的存在……麦克斯·战斗召唤了出来。</p>
+    <p>因为完全没有战斗力，所以只有他没有参加，但是这次反而觉得这样比较好。</p>
+    <p>多亏于此，我才在这里出了传话的角色。</p>
     <p></p>
-    <p>“<span class="character">お、おお……！？　メ、メルセデス！　何やら大変な事になっているが、大丈夫か！？</span>”</p>
-    <p>“<span class="character">大丈夫じゃない。私はしばらく動けんから、何とか上に行って、戦闘停止を呼びかけてきてくれ</span>”</p>
-    <p>“<span class="character">分かった！　任せてくれ！</span>”</p>
+    <p>“<span class="character">哦，哦……！？梅，梅赛德斯！发生了什么大事，没事吧！？</span>”</p>
+    <p>“<span class="character">没关系。我暂时动不了，你去上面说停止战斗吧。</span>”</p>
+    <p>“<span class="character">知道了！交给我吧！</span>”</p>
     <p></p>
-    <p>　メルセデスから初めて与えられた大任にマックスがやる気を出し、早速崖に向かって走った。</p>
+    <p>马克斯对梅赛德斯第一次被授予的重任充满干劲，立刻朝着悬崖跑去。</p>
     <p></p>
-    <p>“<span class="character">うおおおおお！</span>”</p>
+    <p>“<span class="character">哦哦哦哦哦哦！</span>”</p>
     <p></p>
-    <p>　そして吸血鬼の腕力と体力で崖をよじ登るが、流石に高さがありすぎる。</p>
-    <p>　いかに吸血鬼といえど、マックスはこれといった戦闘訓練も受けずにバジルとかいうエルフェに騙されて王様に仕立て上げられていただけのただのお子様だ。</p>
-    <p>　つまり悲しい事に、彼の身体能力はメルセデスの母のリューディアと大差がない。</p>
-    <p>　よって、当然のように崖からずり落ちてしまった。</p>
+    <p>然后用吸血鬼的腕力和体力攀登悬崖，不过，毕竟太高了。</p>
+    <p>不管怎么说，就算是吸血鬼，麦克斯也不接受战斗训练，只是被罗勒之类的精灵欺骗，被国王打造出来的孩子而已。</p>
+    <p>也就是说可悲的是，他的身体能力和梅赛德斯的母亲琉迪亚没有太大的差别。</p>
+    <p>于是，理所当然地从悬崖上滑下去了。</p>
     <p></p>
-    <p>“<span class="character">うおおおおおおお！</span>”</p>
+    <p>“<span class="character">哦哦哦哦哦哦哦哦哦哦！</span>”</p>
     <p></p>
-    <p>　再び諦めず上る。</p>
+    <p>爬上去，再不放弃。</p>
     <p></p>
-    <p>“<span class="character">うおおあああああ！</span>”</p>
+    <p>“<span class="character">哇啊啊啊啊啊！</span>”</p>
     <p></p>
-    <p>　そして落ちる。</p>
+    <p>然后坠落。</p>
     <p></p>
     <p>“<span class="character">…………</span>”</p>
     <p>“<span class="character">…………</span>”</p>
     <p></p>
-    <p>　メルセデスとベルンハルトは、そんなマックスの様子を遠い目をして見ていた。</p>
-    <p>　あ、これ駄目だ。メッセンジャーにもなれない。</p>
-    <p>　背中越しにベルンハルトの咎めるような視線を感じる。</p>
-    <p>　おい娘よ、もっとマシなのは残っていないのかと問われているのが分かるが、残念ながら全軍放出してしまったので、他にはもういない。</p>
-    <p>　せめてゼリーくらいは残しておくべきだった、と反省する。</p>
-    <p>　しかしそこに、意外な救世主がやってきた。</p>
-    <p>　ぬっ、と上から顔を覗かせたのは、体格はいいが影は薄いメルセデスの兄、ゴットフリートだ。</p>
-    <p>　卒業生ではあるが現在はハンナ、ジークリンデに同行する形で学園にいるフェリックスや、まだ学園で学んでいるモニカ、マルギットと違って彼は普通に……そう、普通に屋敷にいたのだ。</p>
-    <p>　ベルンハルトはメルセデスとの戦いを予感して家族と使用人を全員屋敷から出していたが、何とゴットフリートだけは存在感が無さ過ぎて完全に忘れ去られていた。</p>
-    <p>　そして突如始まった父と娘の大戦争にびっくり仰天し、駆け付けたのだ。</p>
-    <p>　何と悲しい男だろう。しかしこの場では有難いのも事実だった。</p>
-    <p>　崖から降りてきたゴットフリートに、メルセデスは大事な役目を伝える。</p>
+    <p>梅赛德斯和伯恩哈特，远远地看着马克斯的样子。</p>
+    <p>啊，他不行，也不能成为信使。</p>
+    <p>从背后感受到伯恩哈特责备的视线。</p>
+    <p>喂，我女儿啊，我知道有没有剩下更好的了，但是很遗憾全军都发射出去了，其他的都没有了。</p>
+    <p>我反省说，至少应该留下果冻之类的东西。</p>
+    <p>但是，意外的救世主来了。</p>
+    <p>呃，从上面露出脸的是体格很好，但影子很薄的梅赛德斯的哥哥哥特弗里特。</p>
+    <p>虽然是毕业生，但现在和汉娜、吉克林德一起在学校的菲利克斯、还在学校学习的莫妮卡、马吉特不同，他很普通……是的，一般都在家里。</p>
+    <p>伯恩哈特预感到和梅赛德斯的战斗，全家和佣人都从宅邸里出来了，但是只有戈特弗里特实在是太没有存在感了，完全被遗忘了。</p>
+    <p>然后，父亲和女儿突然爆发了一场大战争，吓了一跳，急忙赶来。</p>
+    <p>多么悲伤的男人啊。但是，在这种情况下，令人感激的也是事实。</p>
+    <p>梅赛德斯向从悬崖上下来的戈特弗里特传达了重要的使命。</p>
     <p></p>
-    <p>“<span class="character">兄上……すまないが、上にいるベンケイ……鎧を来た六本腕の奴に、戦闘の停止を伝えてくれ。ベンケイは一度兄上と会っているから、覚えているはずだ。そうすればベンケイを通して、ベアトリクスに伝わる</span>”</p>
+    <p>“<span class="character">哥哥……对不起，上面的琪琪……请告诉穿着铠甲的六只手臂的家伙，停止战斗。琪琪和哥哥见过一次面，所以应该记得。这样的话，通过琪琪，传达给贝尔特里克斯。</span>”</p>
     <p></p>
-    <p>　メルセデスの頼みに、ゴットフリートは頼もしくサムズアップをした。</p>
-    <p>　そして崖を凄まじい速度で上り、ベンケイを発見した。</p>
-    <p>　そして近付き……。</p>
+    <p>对于梅赛德斯的请求，哥特弗里特进行了可靠的武士升级。</p>
+    <p>然后以惊人的速度攀登悬崖，发现了本凯。</p>
+    <p>然后走近……。</p>
     <p></p>
-    <p>“<span class="character">何だ貴様！　敵か！</span>”</p>
-    <p>“<span class="character">ヌワー！</span>”</p>
+    <p>“<span class="character">什么你！是敌人吗！</span>”</p>
+    <p>“<span class="character">努哇！</span>”</p>
     <p></p>
-    <p>　……何とベンケイに殴り飛ばされ、目を回して気絶してしまった。</p>
-    <p>　おい、ベンケイ……おい……。</p>
-    <p>　どうやら、あまりに存在感がなかったせいでベンケイも彼の事を覚えていなかったらしい。</p>
-    <p>　隣にいたクロは“あれ？”という顔でゴットフリートを見ているが、後の祭りだ。</p>
-    <p>　メルセデスも、上から聞こえた声と悲鳴で何があったのかを察してしまった。</p>
+    <p>……竟然被本凯揍飞了，转过眼睛昏倒了。</p>
+    <p>喂，本凯……喂……。</p>
+    <p>看来，因为没有什么存在感，本凯好像也不记得他了。</p>
+    <p>旁边的九郎一脸“嗯？”的表情看着戈特弗里德，不过那是后来的祭典。</p>
+    <p>梅赛德斯也察觉到从上面听到的声音和悲鸣到底发生了什么。</p>
     <p></p>
-    <p>“<span class="character">おいメルセデス……このままでは無駄に駒が減る。どうにかならんか？</span>”</p>
-    <p>“<span class="character">そう言われても……</span>”</p>
+    <p>“<span class="character">喂，梅赛德斯……这样下去棋子会白白减少。有什么办法吗？</span>”</p>
+    <p>“<span class="character">即使这么说……</span>”</p>
     <p></p>
-    <p>　チラ、とマックスを見る。</p>
+    <p>看了一下马克斯。</p>
     <p></p>
-    <p>“<span class="character">うおおおおおお！　な、何故……何故私は崖一つ登れないのだあああぁぁ……！</span>”</p>
+    <p>“<span class="character">哦哦哦哦哦哦哦哦！为什么……为什么我连一个悬崖都爬不上去啊啊啊啊……！</span>”</p>
     <p></p>
-    <p>　マックスは号泣しながら崖の前で項垂れていた。</p>
-    <p>　駄目だ。どうにもならない。</p>
-    <p>　というかゴットフリートにマックスを連れて行かせるべきだった。</p>
-    <p>　流石にマックスならベンケイも分かっただろうに。</p>
-    <p>　いや、そもそもゴットフリートにメルセデスを運んでもらえばよかった。</p>
-    <p>　いくらダメージで上手く思考が回らないとはいえ、これは完全に采配ミスだ。</p>
-    <p>　いや、待て。そもそも魔物がいないなら、新しく生産すればいいだけの話ではないか。</p>
-    <p>　こんな単純な事にも気付けないとは。本当に思考が回っていない。</p>
-    <p>　とりあえずゴブリンでも生産するか……と考えた時であった。</p>
+    <p>马克斯一边嚎啕大哭一边在悬崖前垂头丧气。</p>
+    <p>不行。无可奈何。</p>
+    <p>或者说应该让戈特弗里特带着马克斯去。</p>
+    <p>果然马克斯的话本凯也知道了吧。</p>
+    <p>不，说起来如哥戈特弗里特把梅赛德斯运过来就好了。</p>
+    <p>即使再怎么受伤思考不好，这完全是指挥失误。</p>
+    <p>这是在重振之前，士兵只能继续白白减少的时候。</p>
+    <p>你甚至不应该注意到这么简单的事情。我不是真的在想。</p>
+    <p>那是我在想我是否可以暂时生产哥布林的时候。</p>
     <p></p>
-    <p>“<span class="character">ウォウ！</span>”</p>
+    <p>“<span class="character">汪！</span>”</p>
     <p></p>
-    <p>　ゴットフリートが何かを伝えようと穴から出てきたのを見ていたクロが、倒れているメルセデスの枕元に着地した。</p>
-    <p>　尚、位置的にベルンハルトの顔を踏んでしまっているが、今のベルンハルトはクロを振り落とす事も出来ないので無言で青筋を立てていた。</p>
+    <p>看到戈特弗里特为了传达什么而从洞里出来的小黑，在倒下的梅赛德斯的枕边着陆了。</p>
+    <p>另外，虽然在位置上踩到了伯恩哈特的脸，但是现在的伯恩哈特也不能甩掉小黑，所以默默地青筋。</p>
     <p></p>
-    <p>“<span class="character">クロ、よく来てくれた。悪いが私を上に運んでくれ</span>”</p>
-    <p>“<span class="character">ワン！</span>”</p>
+    <p>“<span class="character">小黑，你来得很好。不好意思，请把我抬上去。</span>”</p>
+    <p>“<span class="character">汪！</span>”</p>
     <p></p>
-    <p>　こうしてメルセデスは無事に上に戻り、自らの勝利とベルンハルトの敗北、そして戦闘の終了を全員に告げた。</p>
+    <p>就这样，梅赛德斯安全地回到了上面，向大家宣告了自己的胜利和伯恩哈特的失败，以及战斗的结束。</p>
+    <p class="img" style="background-image: url('../Images/9ea4b724fc959e68038cc138426efd04.jpg');height: 350px;"></p>
     <p>挿絵(By みてみん)</p>
-    <p>コミカライズを描いて下さっている江戸屋ぽち先生が素晴らしいイラストを描いて下さいました！</p>
-    <p>仲良し親子！</p>
+    <p>画漫画的江戸屋ぽち先生画了一幅绝妙的插图！</p>
+    <p>关系良好的父女</p>
     <p></p>
     <p>　　　　　　　　　　　|</p>
     <p>　　　　　　　　　 　 |　　彡⌒ミ</p>
@@ -213,9 +215,9 @@
     <p>　　　　　　　　　　　　 　(γ　/:::::::</p>
     <p>　　　　　　　　　　　　　　 し ＼:::</p>
     <p>　　　　　　　　　　　　　　　　　 ＼</p>
-    <p>メルセデス“いや、ハゲてないし。ショートカットになっただけだ。それに再生もするぞ”</p>
+    <p>梅赛德斯“不，我没有秃头。这只是一个捷径。而且也能再生回来”</p>
     <p></p>
-    <p>メルセデスがそう言うと、謎の男は悲しそうな顔をし、そして何も言わず去って行った……。</p>
+    <p>梅赛德斯这么一说，神秘人一脸悲伤，二话不说就走了……</p>
 </body>
 
 </html>
